# python-acrclient

./: .pre-commit-config.yaml  404.html  README.md  catalog-info.yaml  gen_ref_pages.py  index.html  mkdocs.yaml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: lint-and-test.yaml  release.yaml  schedule.yaml  semantic-release.yaml
acrclient/: __init__.py  client.py  models.py
docs/: gen_ref_pages.py
reference/SUMMARY/: index.html
reference/acrclient/: index.html
reference/acrclient/client/: index.html
reference/acrclient/models/: index.html
search/: search_index.json
tests/: conftest.py  test_acceptance.py  test_client.py
