[tool.poetry]
name = "acrclient"
version = "0.0.0"
description = "API wrapper for the v2 ACRCloud API"
authors = ["RaBe IT-Reaktion <it@rabe.ch>"]
license = "AGPL-v3"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
readme = "README.md"
packages = [
    { include = "acrclient"},
]

[tool.poetry.dependencies]
python = "^3.11"
requests = ">=2.28.2"
cachecontrol = ">=0.13,<0.15"

[tool.poetry.group.dev.dependencies]
freezegun = "^1.2.2"
Markdown = "^3.3"
mkdocstrings = {extras = ["python"], version = ">=0.21.2,<0.26.0"}
mkdocs-material = "^9.1"
mkdocs = "^1.4.2"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.0"
mkdocs-section-index = "^0.3.5"
pytest = ">=8.1.1,<9.0.0"
pytest-cov = ">=4,<6"
pytest-mypy = "^0.10.3"
pytest-random-order = "^1.1.0"
pytest-ruff = "^0.3.1"
requests-mock = "^1.10.0"
ruff = ">=0.5.0,<0.6.0"
types-requests = "^2.28.11"
wheel = ">=0.40,<0.44"

[tool.pytest.ini_options]
minversion = "7.2"
addopts = "-ra -q --random-order --doctest-glob='*.md' --doctest-modules --cov=acrclient --cov-fail-under=100 --ignore=docs/ --ruff --mypy"
filterwarnings = [
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
